# talos_af

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: build_deploy_main.yaml  dev_auto_build.yaml  docker.yaml  get_version.py
echtvar/: am_config.json  revel_config.json
large_files/: download_inputs.sh
nextflow/: talos_af.config  talos_af.nf
nextflow/assets/: clinvar_header.txt  revel_header.txt
nextflow/inputs/: acmg_secondary.tsv  test_1.vcf.bgz  test_1.vcf.bgz.tbi
nextflow/modules/AnnotateCsq/: main.nf
nextflow/modules/AnnotateGnomadAfs/: main.nf
nextflow/modules/AnnotateWithEchtvar/: main.nf
nextflow/modules/AnnotatedVcfToHt/: main.nf
nextflow/modules/ApplyMoiFiltering/: main.nf
nextflow/modules/CombineAnnotationsAndFilterMt/: main.nf
nextflow/modules/EncodeAlphaMissense/: main.nf
nextflow/modules/EncodeClinvar/: main.nf
nextflow/modules/EncodeRevel/: main.nf
nextflow/modules/FilterVcfToBed/: main.nf
nextflow/modules/MakeSitesOnlyVcf/: main.nf
nextflow/modules/ParseAlphaMissense/: main.nf
nextflow/modules/ParseAlphaMissenseIntoHt/: main.nf
nextflow/modules/ParseClinvar/: main.nf
nextflow/modules/ParseGff3IntoBed/: main.nf
nextflow/modules/ParseRevel/: main.nf
nextflow/modules/ParseRevelIntoHt/: main.nf
nextflow/modules/PrepareAcmgSpec/: main.nf
src/talos_af/: apply_moi_filtering.py  check_moi.py  config.py  config_template.toml  date_string.py  models.py  parsed_spec.json  process_acmg_spec.py  utils.py
src/talos_af/cpg_internal/: CPG_Dockerfile  cpg_flow_stages.py  utils.py
src/talos_af/scripts/: extract_vcf_from_mt.py  find_bed_regions_from_gff3.py  mt_from_vds.py  process_acmg_spec.py  process_alphamissense.py  process_annotated_callset.py  process_clinvar.py  process_gff3.py  process_revel.py  process_sitesonly_vcf.py
test/: test_something.py
