[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name='talos_af'
description='Talos-like application for applying ACMG Actionable Findings detection in large cohorts'
readme = "README.md"
# currently cpg-flow is pinned to this version
requires-python = ">=3.10,<3.11"
version="0.0.1"
license={ "file" = "LICENSE" }
classifiers=[
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

dependencies=[
    'cyvcf2',
    'loguru',
    'mendelbrot',
    'pydantic',
    'toml',
]

[project.urls]
Repository = "https://github.com/populationgenomics/talos-af"

[project.optional-dependencies]
dev = [
    'bump-my-version',
    'pre-commit',
    'pytest',
    'ruff',
]
cpg = [
    'cpg-flow'
]

[tool.hatch.build.targets.wheel]
packages = ["src/talos_af"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[options]
include_package_data = true

[options.package_data]
'talos_af'=  [
    'config_template.toml',
    'am_header.txt',
    'clinvar_header.txt',
    'revel_header.txt',
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ['test']

[tool.ruff]
line-length = 120
extend-exclude = ["venv", ".mypy_cache", ".venv", "build", "dist"]

[tool.ruff.format]
indent-style = 'space'
quote-style = "single"

[tool.ruff.lint]
# ignore pydocstyle, flake8-boolean-trap (FBT)
select = ["A", "B", "C", "E", "F", "G", "I", "I001", "N", "Q", "S", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]

fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "I001", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "FBT", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]

ignore = [
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation for public function
    "ANN204", # Missing type annotation for special method `__init__`
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "ARG002", #  Unused method argument
    "COM812", # Trailing comma prohibited
    "G004", # Logging statement uses f-string
    "Q000", # Single quotes found but double quotes preferred
    "PLR2004", # Magic value used in comparison, consider replacing `n` with a constant variable
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "cpg", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
cpg = ["metamist", "cpg_flow", "cpg_utils"]

[tool.ruff.lint.per-file-ignores]

[tool.bumpversion]
current_version = "0.0.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version="{current_version}"'
replace = 'version="{new_version}"'

[[tool.bumpversion.files]]
filename = ".github/workflows/docker.yaml"
search = "VERSION: {current_version}"
replace = "VERSION: {new_version}"

[[tool.bumpversion.files]]
filename = "README.md"
search = "{current_version}"
replace = "{new_version}"
